<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">splmeet</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_60">60팀 중</string>
    <string name="lbl_48_000">48,000 \u20a9</string>
    <string name="lbl_62">6일차</string>
    <string name="lbl_no">No</string>
    <string name="lbl4">기한 임박</string>
    <string name="lbl5">자리 임박</string>
    <string name="lbl2">성산일출봉</string>
    <string name="lbl3">제주도</string>
    <string name="lbl_09_00">09:00</string>
    <string name="lbl_52">5일차</string>
    <string name="lbl_53">5</string>
    <string name="lbl_031_320_5000">031-320-5000</string>
    <string name="lbl_60_24">60팀 중 24팀 예약</string>
    <string name="lbl_42">4일차</string>
    <string name="lbl_43">4 명 </string>
    <string name="msg_www_everland_co">www.everland.com</string>
    <string name="lbl_2023_07_06">2023.07.06</string>
    <string name="lbl_hong_naver_com">hong@naver.com</string>
    <string name="lbl20">부가 설명</string>
    <string name="lbl21">주소</string>
    <string name="msg_10_00_22_0">매일 10:00 - 22:00</string>
    <string name="lbl22">전화</string>
    <string name="lbl23">추가</string>
    <string name="lbl24">관심</string>
    <string name="lbl25">공유</string>
    <string name="lbl_splmeet">SPLMeeT</string>
    <string name="lbl26">합계</string>
    <string name="lbl27">원</string>
    <string name="lbl28">총 액</string>
    <string name="lbl29">멤버 수</string>
    <string name="lbl_x_5">어린이  x  5</string>
    <string name="msg_2023_07_06_2023">2023.07.06~2023.07.12 </string>
    <string name="lbl_32">3일차</string>
    <string name="msg_15_07_24">15 : 07 : 24 남았어요!</string>
    <string name="lbl_2_250_0002">2,250,000  결제하기</string>
    <string name="msg_2023_07_06_20">2023.07.06 ~ 2023.07.12</string>
    <string name="lbl8">용산역</string>
    <string name="lbl_560_220">560,220원</string>
    <string name="lbl9">결제 내역</string>
    <string name="lbl_x_53">성인  x  5</string>
    <string name="lbl6">여행을 떠나요</string>
    <string name="lbl_x_52">청소년  x  5</string>
    <string name="lbl7">정산하기</string>
    <string name="lbl_560_2202">560,220</string>
    <string name="lbl_560_2203">560,220 원</string>
    <string name="lbl10">에버랜드</string>
    <string name="lbl_07_09">07.09</string>
    <string name="lbl11">알림</string>
    <string name="lbl12">여행지 예약 현황</string>
    <string name="lbl_07_07">07.07</string>
    <string name="lbl13">팀 예약</string>
    <string name="lbl_day_2">Day 2</string>
    <string name="lbl_07_08">07.08</string>
    <string name="lbl14">예약하기</string>
    <string name="lbl_day_3">Day 3</string>
    <string name="lbl15">여행지 예약 하기</string>
    <string name="lbl_07_06">07.06</string>
    <string name="lbl16">어린이</string>
    <string name="lbl_day_1">Day 1</string>
    <string name="lbl17">청소년</string>
    <string name="lbl18">성인</string>
    <string name="lbl19">장소명</string>
    <string name="lbl_07_10">07.10</string>
    <string name="msg">함께 떠날
여행자 정보를 선택해주세요</string>
    <string name="lbl_07_11">07.11</string>
    <string name="lbl_24">24</string>
    <string name="lbl_22">2일차</string>
    <string name="lbl40">태호</string>
    <string name="lbl41">민재</string>
    <string name="lbl42">홍길동</string>
    <string name="lbl_500">500 원</string>
    <string name="lbl43">로그아웃</string>
    <string name="lbl44">탈퇴하기</string>
    <string name="lbl45">캐리비안베이</string>
    <string name="lbl_07_12">07.12</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_12"> 숙소 1</string>
    <string name="lbl_120_000">120,000 \u20a9</string>
    <string name="msg_58_000">58,000원 (대인/청소년) / 46,000원 (소인/경로)</string>
    <string name="lbl30">인당 비용</string>
    <string name="lbl31">팀 관리</string>
    <string name="lbl32">총 지출</string>
    <string name="lbl33">정산 예정</string>
    <string name="lbl">지자체</string>
    <string name="lbl34">민지</string>
    <string name="lbl_23_07_07">23.07.07</string>
    <string name="lbl35">하니</string>
    <string name="lbl_23_07_08">23.07.08</string>
    <string name="lbl36">참여중인 멤버</string>
    <string name="lbl37">다니엘</string>
    <string name="lbl38">해린</string>
    <string name="lbl39">혜인</string>
    <string name="lbl_23_07_09">23.07.09</string>
    <string name="lbl_2_250_000">총합  2,250,000\u20a9</string>
    <string name="lbl_1">1일차</string>
    <string name="lbl_140_055">140,055 원</string>
    <string name="lbl_42_000">42,000원</string>
    <string name="lbl_push">PUSH 알림</string>
    <string name="msg2">경기 용인시 처인구 포곡읍 에버랜드로 199</string>
    <string name="lbl_46_000">46,000원</string>
    <string name="lbl_72">7일차</string>
    <string name="msg_150_000_x_5_7">150,000 X 5 = 750,000 \u20a9</string>
    <string name="lbl_10000">10000\u20a9</string>
    <string name="msg_2023_07_01">2023. 07. 01 (토)</string>
    <string name="msg_2023_07_02">2023. 07. 02 (토)</string>
</resources>
