<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_360pxh"
    android:layout_height="@dimen/_800pxh"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameMypage"
        style="@style/groupStylegray_100"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearColumncontrast"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:orientation="vertical">


            <FrameLayout
                android:id="@+id/frameStackcontrast"
                style="@style/groupStylewhite_4"
                android:layout_width="@dimen/_340pxh"
                android:layout_height="93dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30pxh"
                android:layout_marginEnd="@dimen/_3pxh">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginBottom="@dimen/_16pxv"
                    app:contentInsetStart="0dp">

                    <LinearLayout
                        android:id="@+id/linearRowcontrast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/btnContrast"
                            android:layout_width="@dimen/_60pxh"
                            android:layout_height="@dimen/_60pxh"
                            android:background="@drawable/rectangle_bg_light_blue_50_radius_30"
                            android:contentDescription="@string/app_name"
                            android:paddingHorizontal="@dimen/_12pxh"
                            android:paddingVertical="@dimen/_12pxv"
                            android:scaleType="fitCenter"
                            android:src="@drawable/img_contrast"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:id="@+id/linearColumnseventytwo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_22pxh"
                            android:layout_marginTop="@dimen/_5pxv"
                            android:layout_marginBottom="@dimen/_5pxv"
                            android:layout_weight="0.61"
                            android:gravity="start"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtSeventyTwo"
                                style="@style/txtPretendardbold22"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_5pxh"
                                android:ellipsize="end"
                                android:letterSpacing="0.22"
                                android:lineSpacingExtra="@dimen/_5pxh"
                                android:singleLine="true"
                                tools:text="홍길동" />

                            <TextView
                                android:id="@+id/txtEmail"
                                style="@style/txtPretendardregular12_1"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_18pxv"
                                android:layout_marginTop="@dimen/_3pxv"
                                android:ellipsize="end"
                                android:lineSpacingExtra="@dimen/_3pxh"
                                android:singleLine="true"
                                tools:ignore="TextSizeCheck"
                                tools:text="@string/lbl_hong_naver_com" />

                        </LinearLayout>
                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>
            </FrameLayout>

            <android.widget.Button
                android:id="@+id/team"
                style="@style/txtPretendardsemibold18_1"
                android:layout_width="@dimen/_340pxh"
                android:layout_height="93dp"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_3pxh"
                android:background="@drawable/rectangle_bg_white_a700_radius_25_999"
                android:drawableStart="@drawable/img_user_blue_a100"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:orientation="horizontal"
                android:outlineProvider="none"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingEnd="180dp"
                android:text="팀 관리"
                android:textAllCaps="false"

                />

            <android.widget.Button
                android:id="@+id/pay"
                style="@style/txtPretendardsemibold18_1"
                android:layout_height="93dp"
                android:layout_marginTop="@dimen/_15pxv"
                android:background="@drawable/rectangle_bg_white_a700_radius_25_999"
                android:backgroundTint="@color/white_A700"
                android:drawableStart="@drawable/img_menu"
                android:outlineProvider="none"
                android:layout_width="@dimen/_340pxh"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="22dp"
                android:paddingEnd="165dp"
                android:text="결제 내역"
                android:textAllCaps="false" />


            <LinearLayout
                android:id="@+id/linearRowgrouptwentyone"
                style="@style/groupStylewhite_4"
                android:layout_width="@dimen/_340pxh"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="90dp"
                android:layout_marginTop="@dimen/_219pxv"
                android:layout_marginEnd="@dimen/_3pxh"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearRownotification"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_25pxv"
                    android:layout_marginBottom="@dimen/_21pxv"
                    android:layout_weight="0.71"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageNotification"
                        android:layout_width="@dimen/_33pxh"
                        android:layout_height="@dimen/_38pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_notification"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_notification" />

                    <TextView
                        android:id="@+id/txtPUSH"
                        style="@style/txtPretendardsemibold18_1"
                        android:layout_width="@dimen/_100pxh"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_marginRight="@dimen/_20pxh"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_weight="0.71"
                        android:ellipsize="end"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:singleLine="true"

                        tools:text="@string/lbl_push" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/frameVideocamera"
                    android:layout_width="@dimen/_62pxh"
                    android:layout_height="@dimen/_32pxv"
                    android:layout_marginStart="@dimen/_63pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginBottom="@dimen/_26pxv">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:checked="true"
                        tools:ignore="TouchTargetSizeCheck" />

                    <View
                        android:id="@+id/lineLineFive"
                        android:layout_width="@dimen/_1pxh"
                        android:layout_height="@dimen/_19pxv"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginBottom="@dimen/_6pxv"
                        android:background="@color/white_A700" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logout"
                    style="@style/btnSolidRounded_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/lbl43"
                    android:textAllCaps="false"
                    tools:text="@string/lbl43" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/del"
                    style="@style/btnSolidRounded_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/lbl44"
                    android:textAllCaps="false"
                    tools:text="@string/lbl44" />


            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>